fix: update to fix spacing

--- a/src/styles/AboutMe.module.css
+++ b/src/styles/AboutMe.module.css
@@ -324,7 +324,7 @@
   }
 
   .educationCertsContainer {
-    padding: 100px 200px;
+    padding: 0 200px 100px 200px;
   }
 
   .educationCertContent {
